# gcfpub

./: .gitignore  CMakeLists.txt  README.md  Version.props  build.bat  fix-release.bat  release.bat  version.json
.claude/: settings.local.json
.github/workflows/: sync-release-to-public.yml
installer/: build_installer.bat  setup.iss
releases/v1.2.1/: checksums.sha256
releases/v1.3.0/: checksums.sha256
releases/v1.3.1/: checksums.sha256
res/: resource.rc
scripts/: Calculate-InstallerHash.ps1  Prepare-Release.ps1  release.bat
src/: app_icon.cpp  app_icon.h  cf_parser.cpp  cf_parser.h  clipboard.cpp  clipboard.h  config.cpp  config.h  dialogs.cpp  dialogs.h  hotkey_manager.cpp  hotkey_manager.h  install_mode.cpp  install_mode.h  main.cpp  overlay.cpp  overlay.h  resource.h  task_scheduler.cpp  task_scheduler.h  tray_icon.cpp  tray_icon.h  update_checker.cpp  update_checker.h  window_finder.cpp  window_finder.h
tools/: generate_icon.cpp
